# DAIoT_WiFi_Clearblade_SensorSim_esp32

./: CMakeLists.txt  README.md  sdkconfig
components/clearblade_connector/: CMakeLists.txt  certs.h  clearblade_connect.c  clearblade_connect.h  device.key  jwt_token_gcp.c  jwt_token_gcp.h  mqtt_basico.c  mqtt_basico.h  sntp_time.c  sntp_time.h
components/sensor_tph/: CMakeLists.txt  temp_sensor.c  temp_sensor.h
components/wifi_manager/: CMakeLists.txt  wfm_miscs.c  wfm_miscs.h  wifi_manager.c  wifi_manager.h
main/: main.c
